	was pulled in by mistake, only GIO/GLib was ever used...

	Change %N macro to not be mutually exclusive with most of other
	macros (it wasn't documented and didn't make much sense).  Thanks to James
	Dietrich.

	Changed handling of Ctrl-Z to not suspend the application if a
	corresponding user mapping exists.  Patch 高浩亮 (a.k.a. haolian9).

	Added command-line history to menu mode.

	Added "mchistory" value to 'vifminfo' and 'sessionoptions' option.  It
	manages storing of command-line history of menus.

	Added ":history mcmd" menu for displaying command-line history of menus.

	Added :col[der] and :cnew[er] commands to menu mode to traverse history of
	navigation menus.

	Added :chi[story] command that opens a menu of saved menus.

	Added :chi[story] command to menu mode.

	Added 'hloptions' option to configure which columns get colored.  Thanks to
	qsmodo.

	Added "column:{name}" form of argument to :highlight command to specify
	style of a separate column.  Thanks to Anton Gepting.

	Added "millersep:" value to 'fillchars' that allows customizing the border
	between miller columns.  Thanks to Shuo (a.k.a. shenqshuoh).

	Added :gr[ep] command to menu mode.  Allows (re)running grep command
	on the same set of files without leaving the mode.

	Added :fin[d] command to menu mode.  Allows (re)running find command
	on the same set of files without leaving the mode.

	Added middle view column alignment (specified by "^" in 'viewcolumns'
	option).  Part of the text is replaced with ellipsis to keep both start
	and end visible.  Patch by Vadim Curcă.

	Added escape() builtin function to escape specific characters in strings.
	Thanks to The Cyberduck.

	Don't draw right padding on a truncated rightmost column of a transposed
	ls-like view.

	Made register's content being listed in normal rather then reversed order
	in :registers/:display menu.

	Don't even try to clear graphics when menu-like mode is active.  The
	graphics should have been hidden on entering the mode.
